2008-02-26 Roman
- FIX:/Archive/FSArch: Export values for archives with period more 1 second is fixed.
- FIX:/DB/FireBird: Init headers change to "0" from "NULL".
- FIX:/DAQ/ModBus: Data acquisition block clear is added to disable controller's function.
- !:/UI/Vision: Cut for visual items support is added.


2008-02-25 Roman
- !!:/SYS: The source tree version changed to 0.6.1.
- FIX:/SYS/ControlNode: Exception process on call function TCntrNode::postDisable() is added.
- FIX:/ModSched: Control modules libraries object SHD storing is rewrited.
- !!:/SYS and all modules: Translation to Russian and Ukranian is updated.
- !!:/DB/FireBird: Transaction control is added. Rise performance of group modify operations.
- !!:/DAQ/ModBus: Block mode acquisition support is added.
- /UI/VCAEngine: Copy source and destination path changed to view: /prj_Proj/pg_Pg/pg_Pg1.
- !!/UI/Vision: Visual items copy support is added.
- FIX:/UI/Vision: Save widget on simple it select, on developming, is fixed.
- FIX:/UI/Vision: Self context menu disabled for primitive "FormEl" on development mode.


2008-02-22 Roman
- /Archive: Current time tracing is added for archive data access.
- FIX:/Archive: Archivators start is fixed. Terminate starting if one archivator error.
- /DAQ/Controller: Parameter's number and enabled counter fields is added.
- FIX:/ModShedul: No freeing shared libraries control object is fixed.
- FIX:/SYS: Float point exception(signal SIGFPE) process is added.
- FIX:/Archive/DBArch: Open table once for archive frame flushing is made.
- FIX:/DB/FireBird: FielSet() command is rewrited for made SQL INSERT optimize.
- /DB/SQLite: Set up requests counter into transaction, into address field, is made (/var/tmp/arch.dp:20).
- FIX:/DAQ/DiamondBoards: Commands to atributes process is disadled on time controller stop.
- FIX:/DAQ/ModBus: Zero period crush is fixed. Timeout's ranges is hold.
- FIX:/DAQ/SNMP, /DAQ/Transporter: Zero period crush is fixed.